--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
     <img src="https://drive.google.com/thumbnail?id=1tO4ceOqqE808Ym1sPi75LYK6OByzDkoD&sz=w1000" alt="Foto do casal" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover;">
 </div>
 
-            <h1>Julia & Elio</h1>
-            <p class="date">08 de Novembro de 2025</p>
+            <h1>Fabio & Patty</h1>
+            <p class="date">28 de Março de 2026</p>
             <p class="welcome">Vamos nos casar! Junte-se a nós para uma celebração de amor, família e alegria.</p>
         </div>
     </div>
@@ -1048,7 +1048,7 @@ modalHoteis.onclick = function(e) {
             <div class="footer-logo fade-in">J ♡ E</div>
             <p class="fade-in">Celebrando nosso amor em 08 de Novembro de 2025</p>
             <p style="margin-top: 2rem; opacity: 0.7; font-size: 0.9rem;">
-                © 2025 Casamento Julia & Elio - Feito com ♡
+                © 2025 Casamento Fábio e Patty - Feito com ♡
             </p>
         </div>
     </footer>
